# axum-mongo-app

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  dockerfile  justfile
.github/workflows/: ci.yml
src/: config.rs  db.rs  docs.rs  main.rs
src/models/: user_model.rs
src/repositories/: user_repository.rs
src/routes/: health.rs  mod.rs  user_routes.rs
